Fixed overflow issue
Fixed selected entry to boolean

--- a/src/WebComponents/Profiler/profiler.scss
+++ b/src/WebComponents/Profiler/profiler.scss
@@ -137,12 +137,14 @@
                 }
             }
 
-            > div:nth-child(2) {
+            > div {
                 border: 1px solid #C7C7C7;
                 border-left-width: 0;
                 margin-top: 1px;
                 margin-bottom: 1px;
+            }
 
+            > div:nth-child(2) {
                 vi-scroller {
                     svg ::content {
                         g.xaxis {
@@ -244,6 +246,10 @@
                         padding: 0 var(--theme-h5);
                         color: var(--theme-color);
                     }
+                }
+
+                vi-scroller {
+                    top: var(--theme-h2);
                 }
 
                 main {
